--- a/themes/dawn/layout/_common/script.ejs
+++ b/themes/dawn/layout/_common/script.ejs
@@ -2,6 +2,7 @@
 <script>
 window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')
 </script>
+
 <%- js('js/plugin.min') %>
 <%- js('js/application') %>
 <%- partial('_script/search') %>
@@ -19,3 +20,4 @@ window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')
 <% } %>
 <%- partial('_script/fancybox') %>
 <%- partial('_script/analytics') %>
+<%- partial('_script/mermaid') %>
