add google sitemap

--- a/themes/dawn/layout/_common/head.ejs
+++ b/themes/dawn/layout/_common/head.ejs
@@ -12,6 +12,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no,email=no,adress=no">
   <meta name="baidu-site-verification" content="nMObQh3NN3" />
+  <meta name="google-site-verification" content="lL9RuvcDbSPB94ZoqOZ2uYotWopOkucxZhNeIjQiWYY" />
   <!-- Color theme for statusbar -->
   <meta name="theme-color" content="#000000" />
   <!-- 强制页面在当前窗口以独立页面显示,防止别人在框架里调用页面 -->
